--- a/Taller 2/views/tabla_NAs.html
+++ b/Taller 2/views/tabla_NAs.html
@@ -1,7 +1,7 @@
 
-<table style="text-align:center"><tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td>Valores_faltantes</td></tr>
-<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">precio_petroleo</td><td>0.021</td></tr>
-<tr><td style="text-align:left">precio_carbon</td><td>0.021</td></tr>
-<tr><td style="text-align:left">precio_gas_natural</td><td>0.021</td></tr>
-<tr><td style="text-align:left">precio_gasolina</td><td>0.021</td></tr>
-<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr></table>
+<table style="text-align:center"><tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td>Porcentaje</td><td>N</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">precio_petroleo</td><td>2.144</td><td>188</td></tr>
+<tr><td style="text-align:left">precio_carbon</td><td>2.144</td><td>188</td></tr>
+<tr><td style="text-align:left">precio_gas_natural</td><td>2.144</td><td>188</td></tr>
+<tr><td style="text-align:left">precio_gasolina</td><td>2.144</td><td>188</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr></table>
